# aim.pat

./: .gitignore  CLAUDE.md  README.md  create-agent.sh
.claude/: settings.json
memory/: agents.md  platform.md  user.md
nagent-template/: agent.yaml  create-agent.sh
nagent-template-2/: CLAUDE.md  README.md  agent.yaml
nagent-template-2/01-resources/: README.md  context.yaml
nagent-template-2/02-workflows/: README.md
nagent-template-2/03-outputs/: README.md
nagent-template-2/04-axon/: README.md
nagent-template-2/04-memory/: README.md
nagent-template-2/07-term/: README.md
nagent-template-2/08-memo/: README.md
nagent-template/03-nucleus/: CLAUDE.md
nagents/: README.md
nagents/na-001-personal/: README.md  registry.yaml
nagents/na-002-bnprs-core/: README.md  registry.yaml
nagents/na-003-bnprs-infra/: README.md  registry.yaml
nagents/na-003-bnprs-infra/007-bnprs-grc-kms/07-axon-terminals/deliverables/bgl-issue-lambda/: Cargo.toml  deploy.sh
nagents/na-003-bnprs-infra/007-bnprs-grc-kms/07-axon-terminals/deliverables/bgl-issue-lambda/src/: main.rs
nagents/na-004-bnprs-biometrics/: README.md  registry.yaml
nagents/na-005-bnprs-fintech/: README.md  registry.yaml
nagents/na-006-bnprs-deployments/: README.md  registry.yaml
nagents/na-007-bnprs-cxo/: README.md  registry.yaml
nagents/na-007-bnprs-portal/: README.md  registry.yaml
nagents/na-007-bnprs-team/: .gitignore  README.md  create-agent-real.sh  registry.yaml
nagents/na-007-bnprs-zoo/: registry.yaml
nagents/na-008-bnprs-team/: README.md  create-agent-real.sh  registry.yaml
(+1029 files in other folders)
